[gd_scene load_steps=19 format=3 uid="uid://cr2kker7c7odl"]

[ext_resource type="Script" path="res://Scripts/SceneController.gd" id="1_th5nb"]
[ext_resource type="Texture2D" uid="uid://dg27d78arfuiw" path="res://Sprites/Table.png" id="2_t1qwy"]
[ext_resource type="Texture2D" uid="uid://3d51lii1lbky" path="res://Sprites/Scroll_v2.png" id="3_0oich"]
[ext_resource type="Texture2D" uid="uid://b06xgwjf3yol0" path="res://Sprites/Frame.png" id="4_xjvn5"]
[ext_resource type="Texture2D" uid="uid://dbfntqibptuk8" path="res://Sprites/inventory.png" id="5_2a1c5"]
[ext_resource type="Texture2D" uid="uid://dkl3axlw277jt" path="res://Sprites/Text_v2.png" id="6_tvshw"]
[ext_resource type="Texture2D" uid="uid://hhnsc7y7sk4y" path="res://Sprites/ink.png" id="7_i4bx0"]
[ext_resource type="Texture2D" uid="uid://c33df4enfxu5l" path="res://Sprites/Feather.png" id="8_41cma"]
[ext_resource type="Texture2D" uid="uid://b4k0w3wud5lrl" path="res://Sprites/Compass.png" id="9_axy3e"]
[ext_resource type="Texture2D" uid="uid://sebrujnt1s6d" path="res://Sprites/Candle.png" id="10_48cvj"]
[ext_resource type="Texture2D" uid="uid://iosfd5f4d64l" path="res://Sprites/Itens/espada.png" id="11_scy73"]
[ext_resource type="PackedScene" uid="uid://f03fxmp0chlw" path="res://Scenes/pause_menu.tscn" id="11_wlqp4"]
[ext_resource type="Texture2D" uid="uid://em1ept8odmdi" path="res://Sprites/Itens/escudo.png" id="12_8td62"]
[ext_resource type="Texture2D" uid="uid://dp1crdqhahgtg" path="res://Sprites/Itens/bomba.png" id="13_5v8b1"]
[ext_resource type="Texture2D" uid="uid://dwd78jevhc836" path="res://Sprites/Itens/gancho.png" id="14_wuyx3"]
[ext_resource type="Texture2D" uid="uid://byytd635hmsn1" path="res://Sprites/Itens/pa.png" id="15_3rfs2"]
[ext_resource type="Texture2D" uid="uid://b00cd3hu4npn8" path="res://Sprites/Itens/pesca.png" id="16_nhbfo"]
[ext_resource type="Texture2D" uid="uid://dhq47tesiy1tu" path="res://Sprites/Itens/mapa.png" id="17_wlj7q"]

[node name="GameInterface" type="Node2D"]
process_mode = 3
script = ExtResource("1_th5nb")
dialog_path = "res://Scripts/CasaAventureiro.json"

[node name="Sprites" type="Node" parent="."]

[node name="Interface" type="Node" parent="Sprites"]

[node name="Table" type="Sprite2D" parent="Sprites/Interface"]
position = Vector2(640, 360)
scale = Vector2(10, 10)
texture = ExtResource("2_t1qwy")

[node name="ColorRect" type="ColorRect" parent="Sprites/Interface"]
offset_right = 1294.0
offset_bottom = 738.0
color = Color(0, 0, 0, 0.529412)

[node name="Scroll" type="Sprite2D" parent="Sprites/Interface"]
position = Vector2(329.222, 138.411)
scale = Vector2(6.3873, 5.01859)
texture = ExtResource("3_0oich")

[node name="Frame" type="Sprite2D" parent="Sprites/Interface"]
position = Vector2(223.387, 414.095)
scale = Vector2(4, 4)

[node name="Map" type="Sprite2D" parent="Sprites/Interface"]
position = Vector2(225.093, 416.749)
scale = Vector2(5.7097, 5.7097)
texture = ExtResource("4_xjvn5")

[node name="Inventory" type="Sprite2D" parent="Sprites/Interface"]
position = Vector2(532.973, 407.264)
scale = Vector2(4.91554, 4.91554)
texture = ExtResource("5_2a1c5")

[node name="Text" type="Sprite2D" parent="Sprites/Interface"]
position = Vector2(952, 384)
scale = Vector2(9, 10)
texture = ExtResource("6_tvshw")

[node name="Decoration" type="Node" parent="Sprites"]

[node name="InkBottle" type="Sprite2D" parent="Sprites/Decoration"]
visible = false
position = Vector2(1228.7, 407.447)
scale = Vector2(4.05556, 4.05556)
texture = ExtResource("7_i4bx0")

[node name="Feather" type="Sprite2D" parent="Sprites/Decoration"]
visible = false
position = Vector2(1220.7, 311.447)
rotation = -0.516197
scale = Vector2(3.9, 3.9)
texture = ExtResource("8_41cma")

[node name="Compass" type="Sprite2D" parent="Sprites/Decoration"]
visible = false
position = Vector2(133.045, 244.182)
rotation = -0.304778
scale = Vector2(1.7, 1.7)
texture = ExtResource("9_axy3e")

[node name="Candle" type="Sprite2D" parent="Sprites/Decoration"]
visible = false
position = Vector2(612.172, 228.163)
scale = Vector2(2.61172, 2.61172)
texture = ExtResource("10_48cvj")

[node name="InventoryItens" type="Node" parent="Sprites"]

[node name="Espada" type="Sprite2D" parent="Sprites/InventoryItens"]
visible = false
position = Vector2(463.726, 331.875)
scale = Vector2(3.8, 3.8)
texture = ExtResource("11_scy73")

[node name="Escudo" type="Sprite2D" parent="Sprites/InventoryItens"]
visible = false
position = Vector2(532.472, 334)
scale = Vector2(4, 4)
texture = ExtResource("12_8td62")

[node name="Bomba" type="Sprite2D" parent="Sprites/InventoryItens"]
visible = false
position = Vector2(470.913, 390.068)
scale = Vector2(4.6, 4.6)
texture = ExtResource("13_5v8b1")

[node name="Gancho" type="Sprite2D" parent="Sprites/InventoryItens"]
visible = false
position = Vector2(463.575, 466.637)
scale = Vector2(3.8, 3.8)
texture = ExtResource("14_wuyx3")

[node name="Pa" type="Sprite2D" parent="Sprites/InventoryItens"]
visible = false
position = Vector2(537.532, 394.303)
scale = Vector2(3.7, 3.7)
texture = ExtResource("15_3rfs2")

[node name="VaraPesca" type="Sprite2D" parent="Sprites/InventoryItens"]
visible = false
position = Vector2(601.638, 334.334)
scale = Vector2(3.7, 3.7)
texture = ExtResource("16_nhbfo")

[node name="Mapa" type="Sprite2D" parent="Sprites/InventoryItens"]
visible = false
position = Vector2(601.487, 399.556)
scale = Vector2(3.5, 3.5)
texture = ExtResource("17_wlj7q")

[node name="Sprite2D3" type="Sprite2D" parent="Sprites/InventoryItens"]

[node name="Sprite2D4" type="Sprite2D" parent="Sprites/InventoryItens"]

[node name="TextLayer" type="Node" parent="."]

[node name="Canvas" type="CanvasLayer" parent="TextLayer"]

[node name="Description" type="Panel" parent="TextLayer/Canvas"]
offset_left = 720.0
offset_top = 128.0
offset_right = 1184.0
offset_bottom = 461.0

[node name="DescriptionText" type="RichTextLabel" parent="TextLayer/Canvas/Description"]
layout_mode = 0
offset_right = 464.0
offset_bottom = 280.0

[node name="Options" type="Panel" parent="TextLayer/Canvas"]
offset_left = 720.0
offset_top = 468.0
offset_right = 1184.0
offset_bottom = 624.0

[node name="OptionsText" type="RichTextLabel" parent="TextLayer/Canvas/Options"]
layout_mode = 0
offset_right = 464.0
offset_bottom = 208.0

[node name="PauseMenu" parent="." instance=ExtResource("11_wlqp4")]
visible = false
